--- a/config/config.env.example
+++ b/config/config.env.example
@@ -1,2 +1,3 @@
 NODE_ENV=development
 PORT=5000
+MONGO_URI=mongodb+srv://<dbuser>:<dbuserpassword>@xxxxxxxxxxxxxxxxxxxx.mongodb.net/<database>?retryWrites=true&w=majority
